--- a/frontend_react_vite/src/components/NavBar/NavBar.scss
+++ b/frontend_react_vite/src/components/NavBar/NavBar.scss
@@ -33,8 +33,8 @@
 .app__navbar-links {
   flex: 1;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   list-style: none;
 
   li {
