--- a/frontend_react_vite/src/container/Header/Header.scss
+++ b/frontend_react_vite/src/container/Header/Header.scss
@@ -203,13 +203,10 @@
     display: flex;
     justify-content: center;
     border-radius: 50%;
-    mix-blend-mode: darken;
-    background: rgba(177, 188, 194, 0.39);
-    box-shadow: 10px 10px 100px rgba(0, 0, 0, 0.377);
-    // top: 0;
-    // left: 0;
-    // right: 0;
-    // bottom: 0;
+    mix-blend-mode: multiply;
+    background: rgba(177, 188, 194, 0.3);
+    box-shadow: 0px 0px 100px rgba(111, 146, 175, 0.644);
+
   }
 
   @media screen and (max-width: 1200px) {
