--- a/frontend_react_vite/src/container/About/About.scss
+++ b/frontend_react_vite/src/container/About/About.scss
@@ -2,6 +2,20 @@
   flex: 1;
   width: 100%;
   flex-direction: column;
+
+  padding: 1rem 2rem 0rem;
+
+  @media screen and (min-width: 2000px) {
+    padding-top: 4rem;
+  }
+
+  @media screen and (max-width: 1200px) {
+    flex-direction: column;
+  }
+
+  @media screen and (max-width: 450px) {
+    padding: 5rem 1rem 2rem;
+  }
 }
 
 .app__profiles {
