--- a/frontend_react_vite/src/container/Footer/Footer.scss
+++ b/frontend_react_vite/src/container/Footer/Footer.scss
@@ -3,8 +3,18 @@
   width: 100%;
   flex-direction: column;
 
-  @media screen and (max-width: 768px) {
+  padding: 1rem 2rem 0rem;
+
+  @media screen and (min-width: 2000px) {
+    padding-top: 4rem;
+  }
+
+  @media screen and (max-width: 1200px) {
     flex-direction: column;
+  }
+
+  @media screen and (max-width: 450px) {
+    padding: 5rem 1rem 2rem;
   }
 }
 
@@ -14,7 +24,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
-  margin: 4em 2rem 2rem;
+  margin: 2em 2rem 2rem;
 
   .app__footer-card {
     min-width: 290px;
@@ -22,7 +32,8 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-
+    text-decoration: none;
+    color: var(--gray-color);
     margin: 1rem 0;
     padding: 1rem;
     border-radius: 10px;
@@ -39,6 +50,7 @@
 
     p {
       font-weight: 500;
+      text-decoration: none;
     }
     a {
       text-decoration: none;
@@ -135,7 +147,7 @@
   }
 }
 .app__footer-form-alerts {
-   width: 60%;
+  width: 60%;
   flex-direction: column;
 
   div {
