--- a/frontend_react_vite/src/container/Header/Header.scss
+++ b/frontend_react_vite/src/container/Header/Header.scss
@@ -1,9 +1,9 @@
 #home {
-  position: relative;
-  background: url('../../assets/bgIMG.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: repeat;
+  // position: relative;
+  // background: linear-gradient(90deg, #f7cccc 0%, #96BBE8 100%);
+  // background-size: cover;
+  // background-position: center;
+  // background-repeat: repeat;
 
   // disable the default padding styles
   .app__wrapper {
@@ -24,7 +24,7 @@
   padding: 6rem 2rem 0rem;
 
   @media screen and (min-width: 2000px) {
-    padding-top: 10rem;
+    padding-top: 8rem;
   }
 
   @media screen and (max-width: 1200px) {
@@ -203,10 +203,9 @@
     display: flex;
     justify-content: center;
     border-radius: 50%;
-    mix-blend-mode: multiply;
-    background: rgba(177, 188, 194, 0.3);
-    box-shadow: 0px 0px 100px rgba(111, 146, 175, 0.644);
-
+    // mix-blend-mode: darken;
+    background:  linear-gradient(70deg, #f7cccc 20%, #7eb6fa 100%);
+    box-shadow: 0px 0px 100px rgb(111, 146, 175);
   }
 
   @media screen and (max-width: 1200px) {
