--- a/frontend_react_vite/src/main.scss
+++ b/frontend_react_vite/src/main.scss
@@ -7,7 +7,7 @@
   --secondary-color: #3f52b7;
   --black-color: #030303;
   --lightGray-color: #e4e4e4;
-  --gray-color: #6b7688;
+  --gray-color: #3e4550;
   --brown-color: #46364a;
   --white-color: #ffffff;
 }
