--- a/frontend_react_vite/src/main.scss
+++ b/frontend_react_vite/src/main.scss
@@ -4,10 +4,10 @@
   --font-base: "DM Sans", sans-serif;
 
   --primary-color: #edf2f8;
-  --secondary-color: #3f52b7;
+  --secondary-color: #3f52b7e0;
   --black-color: #030303;
   --lightGray-color: #e4e4e4;
-  --gray-color: #3e4550;
+  --gray-color: #393d44;
   --brown-color: #46364a;
   --white-color: #ffffff;
 }
