--- a/frontend_react_vite/src/App.scss
+++ b/frontend_react_vite/src/App.scss
@@ -8,7 +8,7 @@
 }
 
 .app__primarybg {
-  background: linear-gradient(90deg, #f8b3b3ab 0%, #c4daf8 100%);
+  background: linear-gradient(90deg, rgba(247, 186, 186, 0.35) 0%, #c4daf8 100%);
 }
 
 .app__container {
@@ -31,7 +31,7 @@
   flex-direction: column;
   padding: 10rem 2rem 1rem;
   align-self: flex-start;
-  
+
   @media screen and (max-width: 450px) {
     padding: 4rem 1rem 2rem;
   }
