--- a/frontend_react_vite/src/container/Experiences/Experiences.scss
+++ b/frontend_react_vite/src/container/Experiences/Experiences.scss
@@ -17,7 +17,7 @@
   }
 
   @media screen and (max-width: 450px) {
-    padding: 5rem 1rem 2rem;
+    padding: 7rem 1rem 2rem;
   }
 }
 
@@ -165,7 +165,7 @@
   text-align: center !important;
   line-height: 1.5 !important;
   opacity: 1 !important;
-
+  margin-right: 1rem;
   @media screen and (min-width: 2000px) {
     font-size: 1.75rem !important;
     max-width: 500px !important;
