Do some refactoring

--- a/frontend_react_vite/src/App.scss
+++ b/frontend_react_vite/src/App.scss
@@ -8,7 +8,7 @@
 }
 
 .app__primarybg {
-  background: linear-gradient(90deg, rgba(247, 186, 186, 0.35) 0%, #c4daf8 100%);
+  background: linear-gradient(90deg, rgba(247, 186, 186, 0.712) 0%, #c4daf8 100%);
 }
 
 .app__container {
@@ -107,8 +107,8 @@
   padding: 1rem;
 
   div {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
     border-radius: 50%;
     background-color: var(--white-color);
     margin: 0.25rem 0;
@@ -121,8 +121,8 @@
     transition: all 0.3s ease-in-out;
 
     svg {
-      width: 15px;
-      height: 15px;
+      width: 20px;
+      height: 20px;
       color: var(--gray-color);
     }
 
@@ -161,7 +161,7 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    background-color: #cbcbcb;
+    background-color: #adabab;
     margin: 0.5rem;
 
     transition: background-color 0.2s ease-in-out;
