--- a/frontend_react_vite/src/container/Projects/Projects.scss
+++ b/frontend_react_vite/src/container/Projects/Projects.scss
@@ -4,7 +4,6 @@
   flex-direction: column;
   padding: 1rem 2rem 0rem;
 
-
   @media screen and (min-width: 2000px) {
     padding-top: 4rem;
   }
@@ -62,7 +61,7 @@
   align-items: center;
 
   .app__project-item {
-    width: 320px;
+    width: 275px;
     flex-direction: column;
 
     margin: 2rem;
@@ -72,7 +71,7 @@
     color: #000;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 
-    cursor: pointer;
+    // cursor: pointer;
     transition: all 0.3s ease;
 
     &:hover {
@@ -94,15 +93,15 @@
 
 .app__project-img {
   width: 100%;
-  height: 200px;
-
+  background-color: #eaeef7;
   position: relative;
+  border-radius: 0.5rem;
 
   img {
     width: 100%;
-    height: 100%;
+    height: 143px;
     border-radius: 0.5rem;
-    object-fit: cover;
+    object-fit: contain;
   }
 
   @media screen and (min-width: 2000px) {
@@ -110,37 +109,30 @@
   }
 }
 
-.app__project-hover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-
-  border-radius: 0.5rem;
-  opacity: 0;
-  transition: all 0.3s ease;
+.app__project-links {
+  display: flex;
+  width: 85%;
+  height: auto;
+  flex-wrap: nowrap;
+  align-content: flex-start;
+  justify-content: space-between;
 
   div {
-    width: 50px;
-    height: 50px;
+    // padding: -1px;
+    position: relative;
+    top: -13px;
     border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: #fff;
+    background-color: var(--white-color);
+    // background-color: var(--secondary-color);
 
-    margin: 1rem;
-    font-family: var(--font-base);
-    font-weight: 800;
     cursor: pointer;
     transition: all 0.3s ease;
 
     svg {
-      width: 50%;
-      height: 50%;
-      color: var(--white-color);
+      width: 25px;
+      height: 25px;
+      color: var(--secondary-color);
+      // color: var(--white-color);
     }
   }
 }
@@ -152,7 +144,7 @@
   flex-direction: column;
 
   h4 {
-    margin-top: 1rem;
+    // margin-top: 0rem;
     line-height: 1.5;
 
     @media screen and (min-width: 2000px) {
@@ -163,9 +155,9 @@
   .app__project-tag {
     position: absolute;
 
-    padding: 0.5rem 1rem;
+    padding: 0.1rem 1rem;
     border-radius: 10px;
     background-color: #fff;
-    top: -25px;
+    top: -40px;
   }
 }
