--- a/frontend_react_vite/src/App.scss
+++ b/frontend_react_vite/src/App.scss
@@ -8,7 +8,8 @@
 }
 
 .app__primarybg {
-  background: linear-gradient(90deg, rgba(247, 186, 186, 0.712) 0%, #c4daf8 100%);
+  background: var(--primary-color);
+  // background: linear-gradient(90deg, #fddbd2 0%, #dbe6f7 100%);
 }
 
 .app__container {
@@ -48,15 +49,15 @@
 
   p {
     text-transform: uppercase;
-    color: var(--black-color);
+    color: var(--dark-blue-color);
   }
 }
 
 .head-text {
   font-size: 2.75rem;
-  font-weight: 800;
+  font-weight: 600;
   text-align: center;
-  color: var(--black-color);
+  color: var(--dark-blue-color);
   text-transform: capitalize;
 
   span {
@@ -85,8 +86,8 @@
 
 .bold-text {
   font-size: 1rem;
-  font-weight: 800;
-  color: var(--black-color);
+  font-weight: 600;
+  color: var(--dark-blue-color);
   text-align: left;
 
   @media screen and (min-width: 2000px) {
@@ -123,7 +124,7 @@
     svg {
       width: 20px;
       height: 20px;
-      color: var(--gray-color);
+      color: var(--secondary-color);
     }
 
     &:hover {
