--- a/frontend_react_vite/src/container/Header/Header.scss
+++ b/frontend_react_vite/src/container/Header/Header.scss
@@ -21,7 +21,7 @@
   height: 100%;
   flex-direction: row;
 
-  padding: 6rem 2rem 0rem;
+  padding: 5rem 2rem 0rem;
 
   @media screen and (min-width: 2000px) {
     padding-top: 8rem;
@@ -32,7 +32,7 @@
   }
 
   @media screen and (max-width: 450px) {
-    padding: 5rem 1rem 2rem;
+    padding: 4rem 1rem 2rem;
   }
 }
 
@@ -44,7 +44,7 @@
   align-items: flex-start;
   height: 100%;
 
-  margin: 2rem;
+  margin: 0rem 4rem 2rem 4rem;
 
   @media screen and (max-width: 1200px) {
     width: 100%;
@@ -129,7 +129,7 @@
   // circles with different height & width
 
   div:nth-child(1) {
-    margin-left: -5rem;
+    margin-left: -3rem;
   }
 
   div:nth-child(2) {
@@ -148,7 +148,7 @@
     margin-top: 1.5rem;
   }
   div:nth-child(5) {
-    margin-left: -5rem;
+    margin-left: -3rem;
   }
 
   @media screen and (max-width: 1200px) {
@@ -199,13 +199,13 @@
   .overlay_circle {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 95%;
+    top: -5px;
     display: flex;
     justify-content: center;
     border-radius: 50%;
-    // mix-blend-mode: darken;
-    background:  linear-gradient(70deg, #f7cccc 20%, #7eb6fa 100%);
-    box-shadow: 0px 0px 100px rgb(111, 146, 175);
+    background: linear-gradient(70deg, #f1876966 20%, rgb(187 210 237) 100%);
+    box-shadow: 0px 0px 100px rgb(170, 190, 211);
   }
 
   @media screen and (max-width: 1200px) {
