--- a/frontend_react_vite/src/main.scss
+++ b/frontend_react_vite/src/main.scss
@@ -1,14 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
 :root {
-  --font-base: "DM Sans", sans-serif;
+  --font-base: "Inter", sans-serif;
 
-  --primary-color: #edf2f8;
-  --secondary-color: #3f52b7e0;
-  --black-color: #030303;
+  --primary-color: #f7f6f5;
+  --secondary-color: #E07A5F;
+  --secondary-color-sat: #e06a49;
+  --dark-blue-color: #4d5172;
   --lightGray-color: #e4e4e4;
   --gray-color: #393d44;
-  --brown-color: #46364a;
+  --brown-color: #C9ADA7;
+  --light-brown-color: #C9ADA7;
   --white-color: #ffffff;
 }
 
